--- a/public/style.css
+++ b/public/style.css
@@ -699,7 +699,7 @@ width: 10px;
 
 
 .sidebar-title {
-    color: #fead53;
+    color: #5a88ca;
     font-size: 25px;
     margin-bottom: 30px;
     text-transform: uppercase;
